--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/fadeScroll.css">
-    <title>Prototipo - Chamin</title>
+    <title>FadeScroll - Angel Lugo</title>
 </head>
 <body>
 
